--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.9",
     "mysql": "^2.13.0",
-    "path": "^0.12.7"
+    "mysql2": "^1.3.6",
+    "path": "^0.12.7",
+    "sequelize": "^4.4.2",
+    "sequelize-cli": "^2.7.0"
   },
   "engines": {
     "node": "6.11.0"
