--- a/config/config.json
+++ b/config/config.json
@@ -14,8 +14,8 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "lxpo43i2cnkx5ofu ",
-    "password": "pc9jkekz3128le7s",
+    "username": "lpmvaqr1szs6agzq",
+    "password": "gvfmmwjfxzvzg5p4",
     "database": "burgers_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
